--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,11 +35,11 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/AliareJava
 endorsed.classpath=
 excludes=
-file.reference.postgresql-42.3.6.jar=C:\\Users\\UNIPAR\\Downloads\\postgresql-42.3.6.jar
+file.reference.postgresql-42.3.6.jar-1=postgresql-42.3.6.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.postgresql-42.3.6.jar}
+    ${file.reference.postgresql-42.3.6.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
