--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=AliareJava
+application.title=JavaDesktop
 application.vendor=Aluno
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -29,10 +29,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/AliareJava.jar
+dist.jar=${dist.dir}/JavaDesktop.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/AliareJava
+dist.jlink.output=${dist.jlink.dir}/JavaDesktop
 endorsed.classpath=
 excludes=
 file.reference.postgresql-42.3.6.jar-1=postgresql-42.3.6.jar
@@ -74,7 +74,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=AliareJava
+jlink.launcher.name=JavaDesktop
 main.class=SistemaAcademico.View.FrmPrincipal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
